centralize content and added photo

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,43 +1,47 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="all">
-      <h1>Personal Bio</h1>
 
-      <div class="Name">
-        <h2>Name</h2>
-        <p>Ng Teck Guan</p>
-      </div>
+<head>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-      <div class="URL">
-        <h2>Github Profile</h2>
-        <a href="https://github.com/renraelreve">Link to my Github Profile</a>
-      </div>
+<body>
+  <div class="container">
+    <h1>Personal Bio</h1>
 
-      <div class="Hobbies">
-        <h2>Hobbies</h2>
-        <ul>
-          <li>Gardening (roses)</li>
-          <li>Reading</li>
-          <li>Coding</li>
-        </ul>
-      </div>
-
-      <div class="Location">
-        <h2>Location</h2>
-        <img src="../assets/Flag_map_of_Singapore.svg.png" alt="Singapore" />
-      </div>
-
-      <div class="Intro">
-        <h2>Brief Introduction</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores quia
-          corporis autem consectetur quas ipsa soluta adipisci et officiis, est
-          illo, maxime qui ullam nobis mollitia deleniti provident nam aliquam!
-        </p>
-      </div>
+    <div class="Name">
+      <img src="../assets/photo for passport.jpg" alt="photo" />
+      <h2>Name</h2>
+      <p>Ng Teck Guan</p>
     </div>
-  </body>
+
+    <div class="URL">
+      <h2>Github Profile</h2>
+      <a href="https://github.com/renraelreve">Link to my Github Profile</a>
+    </div>
+
+    <div class="Hobbies">
+      <h2>Hobbies</h2>
+
+      <p>Gardening (roses)</p>
+      <p>Reading</p>
+      <p>Coding</p>
+
+    </div>
+
+    <div class="Location">
+      <h2>Location</h2>
+      <img src="../assets/Flag_map_of_Singapore.svg.png" alt="Singapore" />
+    </div>
+
+    <div class="Intro">
+      <h2>Brief Introduction</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores quia
+        corporis autem consectetur quas ipsa soluta adipisci et officiis, est
+        illo, maxime qui ullam nobis mollitia deleniti provident nam aliquam!
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
